--- a/archive.html
+++ b/archive.html
@@ -44,6 +44,23 @@
 
 		<div class="archive__source">
 			<div class="archive__date">
+				2/11/17
+			</div>
+			<div class="archive__source-container">
+				<!-- <img class="archive__award" src="imgs/trophy.png"> -->
+				<blockquote class="twitter-tweet archive__source" data-lang="en"><p lang="en" dir="ltr">I am reading that the great border WALL will cost more than the government originally thought, but I have not gotten involved in the.....</p>&mdash; Donald J. Trump (@realDonaldTrump) <a href="https://twitter.com/realDonaldTrump/status/830405706255912960">February 11, 2017</a></blockquote>
+				<script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
+			</div>
+		</div>
+		<div class="archive__comments">
+			<div class="archive__comments-title"> Comments: </div>
+			<div class="archive__comments-text">
+				The great border WALL.  I can't believe how senile this guy is.
+			</div>
+		</div>
+
+		<div class="archive__source">
+			<div class="archive__date">
 				2/10/17
 			</div>
 			<div class="archive__source-container">
