--- a/archive.html
+++ b/archive.html
@@ -42,6 +42,23 @@
 			<a href="/"> Back </a>
 		</div>
 
+		<div class="donnyj__source">
+			<div class="donnyj__date">
+				2/13/17
+			</div>
+			<div class="donnyj__source-container">
+				<!-- <img class="donnyj__award" src="imgs/trophy.png"> -->
+				<blockquote class="twitter-tweet donnyj__source" data-lang="en"><p lang="en" dir="ltr">I know Mark Cuban well. He backed me big-time but I wasn&#39;t interested in taking all of his calls.He&#39;s not smart enough to run for president!</p>&mdash; Donald J. Trump (@realDonaldTrump) <a href="https://twitter.com/realDonaldTrump/status/830769247185952772">February 12, 2017</a></blockquote>
+				<script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
+			</div>
+		</div>
+		<div class="donnyj__comments">
+			<div class="donnyj__comments-title"> Comments: </div>
+			<div class="donnyj__comments-text">
+				What does this have to do with anything.
+			</div>
+		</div>
+
 		<div class="archive__source">
 			<div class="archive__date">
 				2/11/17
