--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 	<div class="donnyj__content">
 		<div class="donnyj__counter">
 			<div class="donnyj__number">
-				0
+				1
 			</div>
 			<div class="donnyj__rw-wrapper">
 				<h2 class="donnyj__rw-sentence">
@@ -64,18 +64,18 @@
 			</div>
 			<div class="donnyj__source">
 				<div class="donnyj__date">
-					2/12/17
+					2/14/17
 				</div>
 				<div class="donnyj__source-container">
-					<!-- <img class="donnyj__award" src="imgs/trophy.png"> -->
-					<blockquote class="twitter-tweet donnyj__source" data-lang="en"><p lang="en" dir="ltr">I know Mark Cuban well. He backed me big-time but I wasn&#39;t interested in taking all of his calls.He&#39;s not smart enough to run for president!</p>&mdash; Donald J. Trump (@realDonaldTrump) <a href="https://twitter.com/realDonaldTrump/status/830769247185952772">February 12, 2017</a></blockquote>
-					<script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
+					<img class="donnyj__award" src="imgs/trophy.png">
+					<!-- <blockquote class="twitter-tweet donnyj__source" data-lang="en"><p lang="en" dir="ltr">I know Mark Cuban well. He backed me big-time but I wasn&#39;t interested in taking all of his calls.He&#39;s not smart enough to run for president!</p>&mdash; Donald J. Trump (@realDonaldTrump) <a href="https://twitter.com/realDonaldTrump/status/830769247185952772">February 12, 2017</a></blockquote>
+					<script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script> -->
 				</div>
 			</div>
 			<div class="donnyj__comments">
 				<div class="donnyj__comments-title"> Comments: </div>
 				<div class="donnyj__comments-text">
-					President Trump is a child.
+					Really proud of you, Trudeau cowed him for the day.
 				</div>
 			</div>
 		</div>
