--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 	<div class="donnyj__content">
 		<div class="donnyj__counter">
 			<div class="donnyj__number">
-				1
+				0
 			</div>
 			<div class="donnyj__rw-wrapper">
 				<h2 class="donnyj__rw-sentence">
@@ -64,18 +64,18 @@
 			</div>
 			<div class="donnyj__source">
 				<div class="donnyj__date">
-					2/14/17
+					2/16/17
 				</div>
 				<div class="donnyj__source-container">
-					<img class="donnyj__award" src="imgs/trophy.png">
-					<!-- <blockquote class="twitter-tweet donnyj__source" data-lang="en"><p lang="en" dir="ltr">I know Mark Cuban well. He backed me big-time but I wasn&#39;t interested in taking all of his calls.He&#39;s not smart enough to run for president!</p>&mdash; Donald J. Trump (@realDonaldTrump) <a href="https://twitter.com/realDonaldTrump/status/830769247185952772">February 12, 2017</a></blockquote>
-					<script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script> -->
+					<!-- <img class="donnyj__award" src="imgs/trophy.png"> -->
+					<blockquote class="twitter-tweet donnyj__source" data-lang="en"><p lang="en" dir="ltr">This Russian connection non-sense is merely an attempt to cover-up the many mistakes made in Hillary Clinton&#39;s losing campaign.</p>&mdash; Donald J. Trump (@realDonaldTrump) <a href="https://twitter.com/realDonaldTrump/status/831837514226921472">February 15, 2017</a></blockquote>
+					<script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
 				</div>
 			</div>
 			<div class="donnyj__comments">
 				<div class="donnyj__comments-title"> Comments: </div>
 				<div class="donnyj__comments-text">
-					Really proud of you, Trudeau cowed him for the day.
+					Yes, the intelligence agencies are investigating you to cover for Hilary's campaign.  That sounds very reasonable.
 				</div>
 			</div>
 		</div>
