--- a/archive.html
+++ b/archive.html
@@ -41,6 +41,40 @@
 		<div class="archive__back">
 			<a href="/"> Back </a>
 		</div>
+		
+		<div class="donnyj__source">
+			<div class="donnyj__date">
+				2/15/17
+			</div>
+			<div class="donnyj__source-container">
+				<!-- <img class="donnyj__award" src="imgs/trophy.png"> -->
+				<blockquote class="twitter-tweet donnyj__awards" data-lang="en"><p lang="en" dir="ltr">Obamacare continues to fail. Humana to pull out in 2018. Will repeal, replace &amp; save healthcare for ALL Americans. <a href="https://t.co/glWEQ0lNR4">https://t.co/glWEQ0lNR4</a></p>&mdash; Donald J. Trump (@realDonaldTrump) <a href="https://twitter.com/realDonaldTrump/status/831636777110757377">February 14, 2017</a></blockquote>
+				<script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
+			</div>
+		</div>
+		<div class="donnyj__comments">
+			<div class="donnyj__comments-title"> Comments: </div>
+			<div class="donnyj__comments-text">
+				A nice little deflection from the multitude of scandals he currently has going.  In addition, I'd love to ask by what metric the ACA is failing?
+			</div>
+		</div>
+
+		<div class="donnyj__source">
+			<div class="donnyj__date">
+				2/14/17
+			</div>
+			<div class="donnyj__source-container">
+				<img class="donnyj__award" src="imgs/trophy.png">
+				<!-- <blockquote class="twitter-tweet donnyj__source" data-lang="en"><p lang="en" dir="ltr">I know Mark Cuban well. He backed me big-time but I wasn&#39;t interested in taking all of his calls.He&#39;s not smart enough to run for president!</p>&mdash; Donald J. Trump (@realDonaldTrump) <a href="https://twitter.com/realDonaldTrump/status/830769247185952772">February 12, 2017</a></blockquote>
+				<script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script> -->
+			</div>
+		</div>
+		<div class="donnyj__comments">
+			<div class="donnyj__comments-title"> Comments: </div>
+			<div class="donnyj__comments-text">
+				Really proud of you, Trudeau cowed him for the day.
+			</div>
+		</div>
 
 		<div class="donnyj__source">
 			<div class="donnyj__date">
