--- a/archive.html
+++ b/archive.html
@@ -44,6 +44,23 @@
 
 		<div class="archive__source">
 			<div class="archive__date">
+				2/16/17
+			</div>
+			<div class="archive__source-container">
+				<!-- <img class="archive__award" src="imgs/trophy.png"> -->
+				<blockquote class="twitter-tweet archive__source" data-lang="en"><p lang="en" dir="ltr">This Russian connection non-sense is merely an attempt to cover-up the many mistakes made in Hillary Clinton&#39;s losing campaign.</p>&mdash; Donald J. Trump (@realDonaldTrump) <a href="https://twitter.com/realDonaldTrump/status/831837514226921472">February 15, 2017</a></blockquote>
+				<script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
+			</div>
+		</div>
+		<div class="archive__comments">
+			<div class="archive__comments-title"> Comments: </div>
+			<div class="archive__comments-text">
+				Yes, the intelligence agencies are investigating you to cover for Hilary's campaign.  That sounds very reasonable.
+			</div>
+		</div>
+
+		<div class="archive__source">
+			<div class="archive__date">
 				2/15/17
 			</div>
 			<div class="archive__source-container">
