--- a/index.html
+++ b/index.html
@@ -64,18 +64,18 @@
 			</div>
 			<div class="donnyj__source">
 				<div class="donnyj__date">
-					2/16/17
+					2/17/17
 				</div>
 				<div class="donnyj__source-container">
 					<!-- <img class="donnyj__award" src="imgs/trophy.png"> -->
-					<blockquote class="twitter-tweet donnyj__source" data-lang="en"><p lang="en" dir="ltr">This Russian connection non-sense is merely an attempt to cover-up the many mistakes made in Hillary Clinton&#39;s losing campaign.</p>&mdash; Donald J. Trump (@realDonaldTrump) <a href="https://twitter.com/realDonaldTrump/status/831837514226921472">February 15, 2017</a></blockquote>
+					<blockquote class="twitter-tweet donnyj__source" data-lang="en"><p lang="en" dir="ltr">Leaking, and even illegal classified leaking, has been a big problem in Washington for years. Failing <a href="https://twitter.com/nytimes">@nytimes</a> (and others) must apologize!</p>&mdash; Donald J. Trump (@realDonaldTrump) <a href="https://twitter.com/realDonaldTrump/status/832197515248275456">February 16, 2017</a></blockquote>
 					<script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
 				</div>
 			</div>
 			<div class="donnyj__comments">
 				<div class="donnyj__comments-title"> Comments: </div>
 				<div class="donnyj__comments-text">
-					Yes, the intelligence agencies are investigating you to cover for Hilary's campaign.  That sounds very reasonable.
+					<a href="https://www.youtube.com/watch?v=ZnY7D4M4k68"> You literally asked Russia to hack Hilary Clintons emails. </a>
 				</div>
 			</div>
 		</div>
