--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 			<div class="donnyj__comments">
 				<div class="donnyj__comments-title"> Comments: </div>
 				<div class="donnyj__comments-text">
-					<a href="https://www.youtube.com/watch?v=ZnY7D4M4k68"> You literally asked Russia to hack Hilary Clintons emails. </a>
+					<a href="https://www.youtube.com/watch?v=ZnY7D4M4k68"> You literally asked Russia to hack Hilary Clinton's emails. </a>
 				</div>
 			</div>
 		</div>
