--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 	<div class="donnyj__content">
 		<div class="donnyj__counter">
 			<div class="donnyj__number">
-				0
+				1
 			</div>
 			<div class="donnyj__rw-wrapper">
 				<h2 class="donnyj__rw-sentence">
@@ -64,18 +64,18 @@
 			</div>
 			<div class="donnyj__source">
 				<div class="donnyj__date">
-					2/17/17
+					2/18/17
 				</div>
 				<div class="donnyj__source-container">
-					<!-- <img class="donnyj__award" src="imgs/trophy.png"> -->
-					<blockquote class="twitter-tweet donnyj__source" data-lang="en"><p lang="en" dir="ltr">Leaking, and even illegal classified leaking, has been a big problem in Washington for years. Failing <a href="https://twitter.com/nytimes">@nytimes</a> (and others) must apologize!</p>&mdash; Donald J. Trump (@realDonaldTrump) <a href="https://twitter.com/realDonaldTrump/status/832197515248275456">February 16, 2017</a></blockquote>
-					<script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
+					<img class="donnyj__award" src="imgs/trophy.png">
+					<!-- <blockquote class="twitter-tweet donnyj__source" data-lang="en"><p lang="en" dir="ltr">Leaking, and even illegal classified leaking, has been a big problem in Washington for years. Failing <a href="https://twitter.com/nytimes">@nytimes</a> (and others) must apologize!</p>&mdash; Donald J. Trump (@realDonaldTrump) <a href="https://twitter.com/realDonaldTrump/status/832197515248275456">February 16, 2017</a></blockquote>
+					<script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script> -->
 				</div>
 			</div>
 			<div class="donnyj__comments">
 				<div class="donnyj__comments-title"> Comments: </div>
 				<div class="donnyj__comments-text">
-					<a href="https://www.youtube.com/watch?v=ZnY7D4M4k68"> You literally asked Russia to hack Hilary Clinton's emails. </a>
+					He used up his commendable lunacy reserve on that press conference, didn't have the juice to say something outrageous on twitter today.  Good job.
 				</div>
 			</div>
 		</div>
