--- a/index.html
+++ b/index.html
@@ -64,18 +64,18 @@
 			</div>
 			<div class="donnyj__source">
 				<div class="donnyj__date">
-					2/19/17
+					2/20/17
 				</div>
 				<div class="donnyj__source-container">
 					<img class="donnyj__award" src="imgs/trophy.png">
-					<blockquote class="twitter-tweet donnyj__source" data-lang="en"><p lang="en" dir="ltr">My statement as to what&#39;s happening in Sweden was in reference to a story that was broadcast on <a href="https://twitter.com/FoxNews">@FoxNews</a> concerning immigrants &amp; Sweden.</p>&mdash; Donald J. Trump (@realDonaldTrump) <a href="https://twitter.com/realDonaldTrump/status/833435244451753984">February 19, 2017</a></blockquote>
+					<blockquote class="twitter-tweet donnyj__source" data-lang="en"><p lang="en" dir="ltr">Give the public a break - The FAKE NEWS media is trying to say that large scale immigration in Sweden is working out just beautifully. NOT!</p>&mdash; Donald J. Trump (@realDonaldTrump) <a href="https://twitter.com/realDonaldTrump/status/833681539997253636">February 20, 2017</a></blockquote>
 					<script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
 				</div>
 			</div>
 			<div class="donnyj__comments">
 				<div class="donnyj__comments-title"> Comments: </div>
 				<div class="donnyj__comments-text">
-					The President should be getting his news from intelligence briefings, not Fox News.
+					A NOT joke, factual incorrectness, and lying about something being fake.
 				</div>
 			</div>
 		</div>
