--- a/archive.html
+++ b/archive.html
@@ -48,6 +48,23 @@
 			</div>
 			<div class="archive__source-container">
 				<img class="archive__award" src="imgs/trophy.png">
+				<blockquote class="twitter-tweet archive__source" data-lang="en"><p lang="en" dir="ltr">My statement as to what&#39;s happening in Sweden was in reference to a story that was broadcast on <a href="https://twitter.com/FoxNews">@FoxNews</a> concerning immigrants &amp; Sweden.</p>&mdash; Donald J. Trump (@realDonaldTrump) <a href="https://twitter.com/realDonaldTrump/status/833435244451753984">February 19, 2017</a></blockquote>
+				<script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
+			</div>
+		</div>
+		<div class="archive__comments">
+			<div class="archive__comments-title"> Comments: </div>
+			<div class="archive__comments-text">
+				The President should be getting his news from intelligence briefings, not Fox News.
+			</div>
+		</div>
+
+		<div class="archive__source">
+			<div class="archive__date">
+				2/19/17
+			</div>
+			<div class="archive__source-container">
+				<img class="archive__award" src="imgs/trophy.png">
 				<!-- <blockquote class="twitter-tweet archive__source" data-lang="en"><p lang="en" dir="ltr">Leaking, and even illegal classified leaking, has been a big problem in Washington for years. Failing <a href="https://twitter.com/nytimes">@nytimes</a> (and others) must apologize!</p>&mdash; Donald J. Trump (@realDonaldTrump) <a href="https://twitter.com/realDonaldTrump/status/832197515248275456">February 16, 2017</a></blockquote>
 				<script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script> -->
 			</div>
