--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 					2/20/17
 				</div>
 				<div class="donnyj__source-container">
-					<img class="donnyj__award" src="imgs/trophy.png">
+					<!-- <img class="donnyj__award" src="imgs/trophy.png"> -->
 					<blockquote class="twitter-tweet donnyj__source" data-lang="en"><p lang="en" dir="ltr">Give the public a break - The FAKE NEWS media is trying to say that large scale immigration in Sweden is working out just beautifully. NOT!</p>&mdash; Donald J. Trump (@realDonaldTrump) <a href="https://twitter.com/realDonaldTrump/status/833681539997253636">February 20, 2017</a></blockquote>
 					<script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
 				</div>
