--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 	<div class="donnyj__content">
 		<div class="donnyj__counter">
 			<div class="donnyj__number">
-				0
+				1
 			</div>
 			<div class="donnyj__rw-wrapper">
 				<h2 class="donnyj__rw-sentence">
@@ -64,18 +64,18 @@
 			</div>
 			<div class="donnyj__source">
 				<div class="donnyj__date">
-					2/21/17
+					2/22/17
 				</div>
 				<div class="donnyj__source-container">
-					<!-- <img class="donnyj__award" src="imgs/trophy.png"> -->
-					<blockquote class="twitter-tweet donnyj__source" data-lang="en"><p lang="en" dir="ltr">The so-called angry crowds in home districts of some Republicans are actually, in numerous cases, planned out by liberal activists. Sad!</p>&mdash; Donald J. Trump (@realDonaldTrump) <a href="https://twitter.com/realDonaldTrump/status/834181712783560705">February 21, 2017</a></blockquote>
-					<script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
+					<img class="donnyj__award" src="imgs/trophy.png">
+					<!-- <blockquote class="twitter-tweet donnyj__source" data-lang="en"><p lang="en" dir="ltr">The so-called angry crowds in home districts of some Republicans are actually, in numerous cases, planned out by liberal activists. Sad!</p>&mdash; Donald J. Trump (@realDonaldTrump) <a href="https://twitter.com/realDonaldTrump/status/834181712783560705">February 21, 2017</a></blockquote>
+					<script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script> -->
 				</div>
 			</div>
 			<div class="donnyj__comments">
 				<div class="donnyj__comments-title"> Comments: </div>
 				<div class="donnyj__comments-text">
-					Donald seems to be disparaging a fundamental aspect of a republic. Sad.
+					Barely etched it out today.
 				</div>
 			</div>
 		</div>
