--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 	<div class="donnyj__content">
 		<div class="donnyj__counter">
 			<div class="donnyj__number">
-				1
+				2
 			</div>
 			<div class="donnyj__rw-wrapper">
 				<h2 class="donnyj__rw-sentence">
@@ -64,7 +64,7 @@
 			</div>
 			<div class="donnyj__source">
 				<div class="donnyj__date">
-					2/22/17
+					2/23/17
 				</div>
 				<div class="donnyj__source-container">
 					<img class="donnyj__award" src="imgs/trophy.png">
@@ -75,7 +75,7 @@
 			<div class="donnyj__comments">
 				<div class="donnyj__comments-title"> Comments: </div>
 				<div class="donnyj__comments-text">
-					Barely etched it out today.
+					Tied his streak.  I'm rooting for you.
 				</div>
 			</div>
 		</div>
