--- a/archive.html
+++ b/archive.html
@@ -44,6 +44,23 @@
 
 		<div class="archive__source">
 			<div class="archive__date">
+				2/24/17
+			</div>
+			<div class="archive__source-container">
+				<!-- <img class="archive__award" src="imgs/trophy.png"> -->
+				<blockquote class="twitter-tweet archive__source" data-lang="en"><p lang="en" dir="ltr">find the leakers within the FBI itself. Classified information is being given to media that could have a devastating effect on U.S. FIND NOW</p>&mdash; Donald J. Trump (@realDonaldTrump) <a href="https://twitter.com/realDonaldTrump/status/835106143462703104">February 24, 2017</a></blockquote>
+				<script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
+			</div>
+		</div>
+		<div class="archive__comments">
+			<div class="archive__comments-title"> Comments: </div>
+			<div class="archive__comments-text">
+				Doesn't like the taste of his own <a href="https://www.youtube.com/watch?v=gNa2B5zHfbQ"> medicine </a>.  Also, barely makes sense.
+			</div>
+		</div>
+
+		<div class="archive__source">
+			<div class="archive__date">
 				2/23/17
 			</div>
 			<div class="archive__source-container">
