--- a/index.html
+++ b/index.html
@@ -68,14 +68,14 @@
 				</div>
 				<div class="donnyj__source-container">
 					<!-- <img class="donnyj__award" src="imgs/trophy.png"> -->
-					<blockquote class="twitter-tweet donnyj__source" data-lang="en"><p lang="en" dir="ltr">find the leakers within the FBI itself. Classified information is being given to media that could have a devastating effect on U.S. FIND NOW</p>&mdash; Donald J. Trump (@realDonaldTrump) <a href="https://twitter.com/realDonaldTrump/status/835106143462703104">February 24, 2017</a></blockquote>
+					<blockquote class="twitter-tweet donnyj__source" data-lang="en"><p lang="en" dir="ltr">For first time the failing <a href="https://twitter.com/nytimes">@nytimes</a> will take an ad (a bad one) to help save its failing reputation. Try reporting accurately &amp; fairly!</p>&mdash; Donald J. Trump (@realDonaldTrump) <a href="https://twitter.com/realDonaldTrump/status/835817351178301440">February 26, 2017</a></blockquote>
 					<script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
 				</div>
 			</div>
 			<div class="donnyj__comments">
 				<div class="donnyj__comments-title"> Comments: </div>
 				<div class="donnyj__comments-text">
-					Doesn't like the taste of his own <a href="https://www.youtube.com/watch?v=gNa2B5zHfbQ"> medicine </a>.  Also, barely makes sense.
+					I'm more worried about the reputation of our country.
 				</div>
 			</div>
 		</div>
