--- a/archive.html
+++ b/archive.html
@@ -42,6 +42,23 @@
 			<a href="/"> Back </a>
 		</div>
 
+		<div class="donnyj__source">
+			<div class="donnyj__date">
+				2/25/17
+			</div>
+			<div class="donnyj__source-container">
+				<!-- <img class="donnyj__award" src="imgs/trophy.png"> -->
+				<blockquote class="twitter-tweet donnyj__source" data-lang="en"><p lang="en" dir="ltr">For first time the failing <a href="https://twitter.com/nytimes">@nytimes</a> will take an ad (a bad one) to help save its failing reputation. Try reporting accurately &amp; fairly!</p>&mdash; Donald J. Trump (@realDonaldTrump) <a href="https://twitter.com/realDonaldTrump/status/835817351178301440">February 26, 2017</a></blockquote>
+				<script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
+			</div>
+		</div>
+		<div class="donnyj__comments">
+			<div class="donnyj__comments-title"> Comments: </div>
+			<div class="donnyj__comments-text">
+				I'm more worried about the reputation of our country.
+			</div>
+		</div>
+
 		<div class="archive__source">
 			<div class="archive__date">
 				2/24/17
