--- a/archive.html
+++ b/archive.html
@@ -42,19 +42,36 @@
 			<a href="/"> Back </a>
 		</div>
 
-		<div class="donnyj__source">
-			<div class="donnyj__date">
-				2/25/17
+		<div class="archive__source">
+			<div class="archive__date">
+				2/27/17
 			</div>
-			<div class="donnyj__source-container">
-				<!-- <img class="donnyj__award" src="imgs/trophy.png"> -->
-				<blockquote class="twitter-tweet donnyj__source" data-lang="en"><p lang="en" dir="ltr">For first time the failing <a href="https://twitter.com/nytimes">@nytimes</a> will take an ad (a bad one) to help save its failing reputation. Try reporting accurately &amp; fairly!</p>&mdash; Donald J. Trump (@realDonaldTrump) <a href="https://twitter.com/realDonaldTrump/status/835817351178301440">February 26, 2017</a></blockquote>
+			<div class="archive__source-container">
+				<!-- <img class="archive__award" src="imgs/trophy.png"> -->
+				<blockquote class="twitter-tweet archive__source" data-lang="en"><p lang="en" dir="ltr">GOP now viewed more favorably than Dems, in Trump era (per NBC/WSJ poll) via <a href="https://twitter.com/HotlineJosh">@HotlineJosh</a>:<a href="https://t.co/Soebxtg2Zd">https://t.co/Soebxtg2Zd</a></p>&mdash; Donald J. Trump (@realDonaldTrump) <a href="https://twitter.com/realDonaldTrump/status/836332166728527872">February 27, 2017</a></blockquote>
 				<script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
 			</div>
 		</div>
-		<div class="donnyj__comments">
-			<div class="donnyj__comments-title"> Comments: </div>
-			<div class="donnyj__comments-text">
+		<div class="archive__comments">
+			<div class="archive__comments-title"> Comments: </div>
+			<div class="archive__comments-text">
+				lol
+			</div>
+		</div>
+
+		<div class="archive__source">
+			<div class="archive__date">
+				2/25/17
+			</div>
+			<div class="archive__source-container">
+				<!-- <img class="archive__award" src="imgs/trophy.png"> -->
+				<blockquote class="twitter-tweet archive__source" data-lang="en"><p lang="en" dir="ltr">For first time the failing <a href="https://twitter.com/nytimes">@nytimes</a> will take an ad (a bad one) to help save its failing reputation. Try reporting accurately &amp; fairly!</p>&mdash; Donald J. Trump (@realDonaldTrump) <a href="https://twitter.com/realDonaldTrump/status/835817351178301440">February 26, 2017</a></blockquote>
+				<script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
+			</div>
+		</div>
+		<div class="archive__comments">
+			<div class="archive__comments-title"> Comments: </div>
+			<div class="archive__comments-text">
 				I'm more worried about the reputation of our country.
 			</div>
 		</div>
@@ -212,19 +229,19 @@
 			</div>
 		</div>
 
-		<div class="donnyj__source">
-			<div class="donnyj__date">
+		<div class="archive__source">
+			<div class="archive__date">
 				2/18/17
 			</div>
-			<div class="donnyj__source-container">
-				<!-- <img class="donnyj__award" src="imgs/trophy.png"> -->
-				<blockquote class="twitter-tweet donnyj__source" data-lang="en"><p lang="en" dir="ltr">Leaking, and even illegal classified leaking, has been a big problem in Washington for years. Failing <a href="https://twitter.com/nytimes">@nytimes</a> (and others) must apologize!</p>&mdash; Donald J. Trump (@realDonaldTrump) <a href="https://twitter.com/realDonaldTrump/status/832197515248275456">February 16, 2017</a></blockquote>
+			<div class="archive__source-container">
+				<!-- <img class="archive__award" src="imgs/trophy.png"> -->
+				<blockquote class="twitter-tweet archive__source" data-lang="en"><p lang="en" dir="ltr">Leaking, and even illegal classified leaking, has been a big problem in Washington for years. Failing <a href="https://twitter.com/nytimes">@nytimes</a> (and others) must apologize!</p>&mdash; Donald J. Trump (@realDonaldTrump) <a href="https://twitter.com/realDonaldTrump/status/832197515248275456">February 16, 2017</a></blockquote>
 				<script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
 			</div>
 		</div>
-		<div class="donnyj__comments">
-			<div class="donnyj__comments-title"> Comments: </div>
-			<div class="donnyj__comments-text">
+		<div class="archive__comments">
+			<div class="archive__comments-title"> Comments: </div>
+			<div class="archive__comments-text">
 				<a href="https://www.youtube.com/watch?v=ZnY7D4M4k68"> You literally asked Russia to hack Hilary Clinton's emails. </a>
 			</div>
 		</div>
