--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 	<div class="donnyj__content">
 		<div class="donnyj__counter">
 			<div class="donnyj__number">
-				0
+				1
 			</div>
 			<div class="donnyj__rw-wrapper">
 				<h2 class="donnyj__rw-sentence">
@@ -64,18 +64,18 @@
 			</div>
 			<div class="donnyj__source">
 				<div class="donnyj__date">
-					2/27/17
+					2/28/17
 				</div>
 				<div class="donnyj__source-container">
-					<!-- <img class="donnyj__award" src="imgs/trophy.png"> -->
-					<blockquote class="twitter-tweet donnyj__source" data-lang="en"><p lang="en" dir="ltr">GOP now viewed more favorably than Dems, in Trump era (per NBC/WSJ poll) via <a href="https://twitter.com/HotlineJosh">@HotlineJosh</a>:<a href="https://t.co/Soebxtg2Zd">https://t.co/Soebxtg2Zd</a></p>&mdash; Donald J. Trump (@realDonaldTrump) <a href="https://twitter.com/realDonaldTrump/status/836332166728527872">February 27, 2017</a></blockquote>
-					<script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
+					<img class="donnyj__award" src="imgs/trophy.png">
+					<!-- <blockquote class="twitter-tweet donnyj__source" data-lang="en"><p lang="en" dir="ltr">GOP now viewed more favorably than Dems, in Trump era (per NBC/WSJ poll) via <a href="https://twitter.com/HotlineJosh">@HotlineJosh</a>:<a href="https://t.co/Soebxtg2Zd">https://t.co/Soebxtg2Zd</a></p>&mdash; Donald J. Trump (@realDonaldTrump) <a href="https://twitter.com/realDonaldTrump/status/836332166728527872">February 27, 2017</a></blockquote>
+					<script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script> -->
 				</div>
 			</div>
 			<div class="donnyj__comments">
 				<div class="donnyj__comments-title"> Comments: </div>
 				<div class="donnyj__comments-text">
-					lol
+					He let someone write his speech, and he's not tweeting. Are we seeing our patsy be reigned in?
 				</div>
 			</div>
 		</div>
