--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 	<div class="donnyj__content">
 		<div class="donnyj__counter">
 			<div class="donnyj__number">
-				2
+				0
 			</div>
 			<div class="donnyj__rw-wrapper">
 				<h2 class="donnyj__rw-sentence">
@@ -64,18 +64,18 @@
 			</div>
 			<div class="donnyj__source">
 				<div class="donnyj__date">
-					3/1/17
+					3/2/17
 				</div>
 				<div class="donnyj__source-container">
-					<img class="donnyj__award" src="imgs/trophy.png">
-					<!-- <blockquote class="twitter-tweet donnyj__source" data-lang="en"><p lang="en" dir="ltr">GOP now viewed more favorably than Dems, in Trump era (per NBC/WSJ poll) via <a href="https://twitter.com/HotlineJosh">@HotlineJosh</a>:<a href="https://t.co/Soebxtg2Zd">https://t.co/Soebxtg2Zd</a></p>&mdash; Donald J. Trump (@realDonaldTrump) <a href="https://twitter.com/realDonaldTrump/status/836332166728527872">February 27, 2017</a></blockquote>
-					<script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script> -->
+					<!-- <img class="donnyj__award" src="imgs/trophy.png"> -->
+					<blockquote class="twitter-tweet donnyj__source" data-lang="en"><p lang="en" dir="ltr">Jeff Sessions is an honest man. He did not say anything wrong. He could have stated his response more accurately, but it was clearly not....</p>&mdash; Donald J. Trump (@realDonaldTrump) <a href="https://twitter.com/realDonaldTrump/status/837488402438176769">March 3, 2017</a></blockquote>
+					<script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
 				</div>
 			</div>
 			<div class="donnyj__comments">
 				<div class="donnyj__comments-title"> Comments: </div>
 				<div class="donnyj__comments-text">
-					He just said "THANKS".  It's an improvement I guess.
+					Well, he committed perjury.
 				</div>
 			</div>
 		</div>
