--- a/archive.html
+++ b/archive.html
@@ -44,6 +44,23 @@
 
 		<div class="archive__source">
 			<div class="archive__date">
+				3/3/17
+			</div>
+			<div class="archive__source-container">
+				<!-- <img class="archive__award" src="imgs/trophy.png"> -->
+				<blockquote class="twitter-tweet archive__source" data-lang="en"><p lang="en" dir="ltr">It is so pathetic that the Dems have still not approved my full Cabinet.</p>&mdash; Donald J. Trump (@realDonaldTrump) <a href="https://twitter.com/realDonaldTrump/status/837638488656920576">March 3, 2017</a></blockquote>
+				<script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
+			</div>
+		</div>
+		<div class="archive__comments">
+			<div class="archive__comments-title"> Comments: </div>
+			<div class="archive__comments-text">
+				Obama's took longer due to GOP obstruction, and try nominating someone who isn't an unmitigated disaster and it will go smoother.
+			</div>
+		</div>
+
+		<div class="archive__source">
+			<div class="archive__date">
 				3/2/17
 			</div>
 			<div class="archive__source-container">
