--- a/index.html
+++ b/index.html
@@ -64,18 +64,18 @@
 			</div>
 			<div class="donnyj__source">
 				<div class="donnyj__date">
-					3/3/17
+					3/4/17
 				</div>
 				<div class="donnyj__source-container">
 					<!-- <img class="donnyj__award" src="imgs/trophy.png"> -->
-					<blockquote class="twitter-tweet donnyj__source" data-lang="en"><p lang="en" dir="ltr">It is so pathetic that the Dems have still not approved my full Cabinet.</p>&mdash; Donald J. Trump (@realDonaldTrump) <a href="https://twitter.com/realDonaldTrump/status/837638488656920576">March 3, 2017</a></blockquote>
+					<blockquote class="twitter-tweet donnyj__source" data-lang="en"><p lang="en" dir="ltr">Arnold Schwarzenegger isn&#39;t voluntarily leaving the Apprentice, he was fired by his bad (pathetic) ratings, not by me. Sad end to great show</p>&mdash; Donald J. Trump (@realDonaldTrump) <a href="https://twitter.com/realDonaldTrump/status/838016045222854656">March 4, 2017</a></blockquote>
 					<script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
 				</div>
 			</div>
 			<div class="donnyj__comments">
 				<div class="donnyj__comments-title"> Comments: </div>
 				<div class="donnyj__comments-text">
-					Obama's took longer due to GOP obstruction, and try nominating someone who isn't an unmitigated disaster and it will go smoother.
+					Okay.  Grammar mistakes aside, (bad ratings can fire someone? were'd they get the authority?), I'm really happy the President pointed out that he was not the one who fired him.  Then going on to call The Apprentice a great show.  This is humiliating.
 				</div>
 			</div>
 		</div>
