--- a/archive.html
+++ b/archive.html
@@ -44,6 +44,23 @@
 
 		<div class="archive__source">
 			<div class="archive__date">
+				3/4/17
+			</div>
+			<div class="archive__source-container">
+				<!-- <img class="archive__award" src="imgs/trophy.png"> -->
+				<blockquote class="twitter-tweet archive__source" data-lang="en"><p lang="en" dir="ltr">Arnold Schwarzenegger isn&#39;t voluntarily leaving the Apprentice, he was fired by his bad (pathetic) ratings, not by me. Sad end to great show</p>&mdash; Donald J. Trump (@realDonaldTrump) <a href="https://twitter.com/realDonaldTrump/status/838016045222854656">March 4, 2017</a></blockquote>
+				<script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
+			</div>
+		</div>
+		<div class="archive__comments">
+			<div class="archive__comments-title"> Comments: </div>
+			<div class="archive__comments-text">
+				Okay.  Grammar mistakes aside, (bad ratings can fire someone? were'd they get the authority?), I'm really happy the President pointed out that he was not the one who fired him.  Then going on to call The Apprentice a great show.  This is humiliating.
+			</div>
+		</div>
+
+		<div class="archive__source">
+			<div class="archive__date">
 				3/3/17
 			</div>
 			<div class="archive__source-container">
