--- a/index.html
+++ b/index.html
@@ -65,18 +65,18 @@
             <div class="donnyj__source">
 				<div class="donnyj__source">
 					<div class="donnyj__date">
-						5/12/17
+						5/31/17
 					</div>
 					<div class="donnyj__source-container">
 						<!-- <img class="donnyj__award" src="imgs/trophy.png"> -->
-						<blockquote class="twitter-tweet donnyj__source" data-lang="en"><p lang="en" dir="ltr">Russia must be laughing up their sleeves watching as the U.S. tears itself apart over a Democrat EXCUSE for losing the election.</p>&mdash; Donald J. Trump (@realDonaldTrump) <a href="https://twitter.com/realDonaldTrump/status/862767872879325185">May 11, 2017</a></blockquote>
+						<blockquote class="twitter-tweet" data-lang="en"><p lang="en" dir="ltr">Despite the constant negative press covfefe</p>&mdash; Donald J. Trump (@realDonaldTrump) <a href="https://twitter.com/realDonaldTrump/status/869766994899468288">May 31, 2017</a></blockquote>
 						<script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
 					</div>
 				</div>
 				<div class="donnyj__comments">
 					<div class="donnyj__comments-title"> Comments: </div>
 					<div class="donnyj__comments-text">
-						Yes, thats what they are laughing at, I don't think I can keep up with this guy.
+						This is the last tweet my sanity can handle covfefe
 					</div>
 				</div>
             </div>
